# relife-data-structure

./: .gitignore  README.md  Taskfile.yml  consolidate_reports.py  logging_setup.py  main.py  pyproject.toml  sample_csv.py  sample_hdf5.py  sample_sqlite.py
consolidator/: __init__.py  analyzer.py  error_handler.py  generator.py  models.py  orchestrator.py  parser.py  quality.py  scanner.py
consolidator/templates/: report_template.md
samples/: Longtable_CAPEX_WORKINPROGRESS.xlsx  README.md  belgium_electricity_smartmeter_sample.sqlite  belgium_gasmeter_sample.sqlite  croatia_public_buildings.sqlite
samples/aemo_price_demand/: README.md
samples/danish_smart_heat_meter_data/: README.md  contextual_data.csv  processed_final_data_sample.csv
samples/fluvius_gas_meter/: README.md
samples/fluvius_smart_meter/: README.md
samples/london_smartmeter_energy_data/: README.md
samples/lower_saxony_electric_load/: README.md
tests/: __init__.py  conftest.py  test_error_handling.py  test_integration.py  test_parser.py  test_quality.py  test_report_generation.py  test_scanner.py
