[project]
name = "relife-data-structure"
version = "0.1.0"
description = "ReLIFE Data Structure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ydata-profiling>=4.14.0",
    "pandas>=2.1.0",
    "rich>=13.7.0",
    "setuptools>=69.0.0",
]

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.1"]
